fix: set package to replace samyoul/u2f-php-server

--- a/composer.json
+++ b/composer.json
@@ -28,5 +28,8 @@
     },
     "autoload-dev": {
         "psr-4": { "Samyoul\\U2F\\U2FServer\\Tests\\": ["test/"] }
+    },
+    "replace": {
+        "samyoul/u2f-php-server": "*"
     }
 }
