chore: set myself as a co-author of the package

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,10 @@
         {
             "name": "Samuel Hawksby-Robinson",
             "email": "samuel@samyoul.com"
+        },
+        {
+            "name": "William Desportes",
+            "email": "williamdes@wdes.fr"
         }
     ],
     "support": {
