--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,17 @@
         "source": "https://github.com/code-lts/U2F-php-server"
     },
     "scripts": {
-        "phpunit": "./vendor/bin/phpunit"
+        "test": "@php phpunit",
+        "phpcs": "@php phpcs",
+        "phpcbf": "@php phpcbf"
     },
     "require": {
         "php": "^7.1 || ^8.0",
         "ext-openssl":"*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7 || ^8 || ^9"
+        "phpunit/phpunit": "^7 || ^8 || ^9",
+        "wdes/coding-standard": "^3.3"
     },
     "autoload": {
         "psr-4": { "CodeLts\\U2F\\U2FServer\\": ["src/"] }
@@ -35,5 +38,10 @@
     },
     "replace": {
         "samyoul/u2f-php-server": "*"
+    },
+    "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     }
 }
