chore: exclude tests and phpunit config from vendor archives

--- a/composer.json
+++ b/composer.json
@@ -43,5 +43,11 @@
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true
         }
+    },
+    "archive": {
+        "exclude": [
+            "/tests",
+            "/phpunit.xml.dist"
+        ]
     }
 }
