--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
-.gitattributes export-ignore
-.gitignore export-ignore
-.github export-ignore
+/.gitattributes export-ignore
+/.gitignore export-ignore
+/.github export-ignore
+/phpcs.xml export-ignore
