chore: adjust archive.exclude

--- a/composer.json
+++ b/composer.json
@@ -43,8 +43,8 @@
     },
     "archive": {
         "exclude": [
-            "/tests",
-            "/phpunit.xml.dist"
+            "/test",
+            "/phpunit.xml"
         ]
     }
 }
