--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "ext-openssl":"*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7 || ^8 || ^9 || ^10",
+        "phpunit/phpunit": "^7 || ^8 || ^9 || ^10 || ^11",
         "wdes/coding-standard": "^3.3"
     },
     "autoload": {
