--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,11 @@
         "phpcbf": "@php ./vendor/bin/phpcbf"
     },
     "require": {
-        "php": "^7.1 || ^8.0",
+        "php": "^7.2 || ^8.0",
         "ext-openssl":"*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7 || ^8 || ^9 || ^10 || ^11",
+        "phpunit/phpunit": "^8 || ^9 || ^10 || ^11",
         "wdes/coding-standard": "^3.3"
     },
     "autoload": {
