--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,10 +16,10 @@ jobs:
                 php-version: ["7.3", "7.4", "8.0", "8.1", "8.2", "8.3"]
                 os: [ubuntu-latest]
                 experimental: [false]
-                coverage-required: [false]
+                coverage-required: [true]
                 composer-options: ['']
                 include:
-                    - { php-version: '7.2', experimental: false, os: ubuntu-latest, composer-options: '', coverage-required: true }
+                    - { php-version: '7.2', experimental: false, os: ubuntu-latest, composer-options: '', coverage-required: false }
                     - { php-version: 'nightly', experimental: true, os: ubuntu-latest, composer-options: '--ignore-platform-reqs' }
         steps:
             - uses: actions/checkout@v4
